re-structured notebook04

--- a/notebook04.pynb.ipynb
+++ b/notebook04.pynb.ipynb
@@ -42,21 +42,6 @@
    "source": [
     "# Problem formulation\n",
     "\n",
-    "This exercise is about stock market prediction in the financial industry. Our case-study and dataset is based on a past Kaggle competition, which details can be found in https://www.kaggle.com/c/jane-street-market-prediction .\n",
-    "\n",
-    "Obviously we are not going to create a complex quantitative trading system but just work on a tiny bit - to deciding whether a particular trade proposal is going to be accepted, so traded, or not. In the end, it is a binary classification problem.\n",
-    "\n",
-    "Basically, the functional requirements for the Spark program we are about to create are as follows:\n",
-    "1. To load the dataset under analysis and making sure it can be further processed by a ML classifier.\n",
-    "2. To create a classification model supported by a SVM algorithm that is fit for the purpose.\n",
-    "3. For each day, to compute the daily score as the sum of the product **weight x resp** (see schema below)\n",
-    "of the trades the system opt to trade in that day. In that respect, the data to be processed is different from the one being used to create the model.\n",
-    "\n",
-    "You can find the file dataset JaneStreetMarket.csv.zip in:\n",
-    "\n",
-    "\n",
-    "https://iscteiul365.sharepoint.com/:u:/s/G365_UC_AlgoritmosparaBigData/Ebj3nk6DLhZHpuoZFEeptqcB6wovOyeUgi72o7QLC-kBeQ?e=GHSn4C\n",
-    "\n",
     "\n",
     "**Context**\n",
     "\n",
@@ -76,32 +61,25 @@
     "**Market data**\n",
     "\n",
     "\n",
-    "The dataset we are going to use relates to the Kaggle competition mentioned above. It contains an anonymized set of features, feature_{0...129}, representing real stock market data features. For example, trading volume and volatility in various time horizons, statistical indicators like *Relative Strength Index (RSI)*, etc.\n",
-    "\n",
-    "Each row in the dataset represents a trading opportunity, for which the system will be predicting an action value: 1 to make the trade or 0 to pass on it.\n",
-    "For each trade, there is an associated `weight` and `resp`: \n",
-    "- The `weight` is the importance of the trade like for example a ratio of transaction cost or, in other words, the capital invested in the trade.\n",
-    "- The `resp` represents the return of the trade, and we can have additional returns over specific but not revealed time horizons. But what matters the most is `resp`.\n",
-    "\n",
-    "The data also includes the day of the trade (as a number) and a value *ts_id* representing time ordering.\n",
-    "\n",
-    "\n",
     "The **data schema** of the dataset is the following:\n",
+    "The dataset contains the following fields:\n",
     "\n",
-    "|Column     | Type| Description |\n",
-    "|:---:|:---:| :---:| \n",
-    "| **date** |Integer| Day of the trade|\n",
-    "| **weight** | Double | The importante of the trade. When 0, it does not contribute for the score of the evaluation of the model, but it is included for the purpose of completeness |\n",
-    "| **resp_1** | Double | Value related to returns over time horizon 1 |\n",
-    "| **resp_2** | Double | Value related to returns over time horizon 2 |\n",
-    "| **resp_3**  | Double | Value related to returns over time horizon 3 |\n",
-    "| **resp_4** | Double | Value related to returns over time horizon 4 |\n",
-    "| **resp** | Double | Value e.g. returns |\n",
-    "| **feature_0** | Double  | Value of anonymized feature 0 |\n",
-    "| ... |  ... | Columns with features 1 to 128 |\n",
-    "| **feature_129** | Double |  Value of anonymized feature 129 |\n",
-    "| **ts_id** | Integer |  Time ordering |\n",
-    "\n"
+    "| Column Name | Data Description | Data Dictionary |\n",
+    "|-------------|------------------|-----------------|\n",
+    "|ISIN|ISIN of the security|string|\n",
+    "|Mnemonic|Stock exchange ticker symbol |string|\n",
+    "|SecurityDesc|Description of the security|string|\n",
+    "|SecurityType|Type of security|string|\n",
+    "|Currency|Currency in which the product is traded|ISO 4217 string (see https://en.wikipedia.org/wiki/ISO_4217)|\n",
+    "|SecurityID|Unique identifier for each contract|int|\n",
+    "|Date |Date of trading period |date |\n",
+    "|Time|Minute of trading to which this entry relates|time (hh:mm)|\n",
+    "|StartPrice|Trading price at the start of period|float|\n",
+    "|MaxPrice|Maximum price over the period|float|\n",
+    "|MinPrice|Minimum price over the period|float|\n",
+    "|EndPrice|Trading price at the end of the period|float|\n",
+    "|TradedVolume|Total value traded|float|\n",
+    "|NumberOfTrades|Number of distinct trades during the period|int|\n"
    ]
   },
   {
